--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,10 +7,29 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="com.bdjobs.logintest.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+
+    <EditText
+        android:id="@+id/userNameET"
+        android:hint="username"
+        android:layout_width="match_parent"
+        android:layout_height="60dp" />
+    <EditText
+        android:inputType="textPassword"
+        android:id="@+id/passwordET"
+        android:hint="password"
+        android:layout_width="match_parent"
+        android:layout_height="60dp" />
+    <Button
+
+        android:id="@+id/loginBTN"
+        android:text="LOGIN"
+        android:layout_gravity="center"
+        android:layout_margin="5dp"
+        android:layout_width="100dp"
+        android:layout_height="60dp" />
+
+
+</LinearLayout>
